# app/controller/log.go
@@ -14,16 +14,16 @@ import (
 
 var mes email.Message
 
-//	@Summary		登录
-//	@Description	登录
-//	@Tags			login
-//	@Accept			application/json
-//	@Produce		application/json
-//	@Param			email		body		models.User			true	"email"
-//	@Param			password	body		models.User			true	"password"
-//	@Success		200			{object}	response.OkMsg		`{"message":"登录成功"}`
-//	@Failure		400			{object}	response.FailMsg	`{"message":"Failure"}`
-//	@Router			/api/login [post]
+// @Summary		登录
+// @Description	获取email password 并检查是否正确
+// @Tags			login
+// @Accept			application/json
+// @Produce		application/json
+// @Param			email		body		models.User			true	"email"
+// @Param			password	body		models.User			true	"password"
+// @Success		200			{object}	response.OkMesData		`{"message":"登录成功"}`
+// @Failure		400			{object}	response.FailMesData	`{"message":"Failure"}`
+// @Router			/api/login [post]
 func Login(c *gin.Context) {
 	var loguser, user models.User
 	// 使用 ShouldBindJSON 解析请求中的 JSON 数据并将其绑定到 user 结构体
@@ -33,14 +33,18 @@ func Login(c *gin.Context) {
 	}
 	//查询用户信息
 	err := common.DB.Table("users").First(&user, "Email = ?", loguser.Email).Error
-	if errors.Is(err, gorm.ErrRecordNotFound) {
-		// 没有找到匹配的记录
-		response.FailMsg(c, "该用户不存在")
-	} else {
-		// 其他查询错误
-		fmt.Printf("查询错误: %s\n", err.Error())
-		//fmt.Println(user)
+	if err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			// 没有找到匹配的记录
+			response.FailMsg(c, "该用户不存在")
+		} else {
+			// 其他查询错误
+			response.FailMsg(c, "other")
+			//fmt.Printf("查询错误: %s\n", err.Error())
+			//fmt.Println(user)
+		}
 	}
+
 	if user.Password == loguser.Password {
 		//密码正确
 		response.OkMsgData(c, user.Email, user.ID)
@@ -56,11 +60,11 @@ func Login(c *gin.Context) {
 // @Tags			login
 // @Accept			application/json
 // @Produce		application/json
-// @Param			email	body		Model.Param			true	"email"
-// @Param			gettype	body		Model.Param			true	"请求类型:注册'register',改密码'change'"
-// @Success		200		{object}	response.OkMsg		"{"message":"获取成功"}"
-// @Failure		400		{object}	response.FailMsg	"{"message":"Failure"}"
-// @Router			/api/login/get_code [get]
+// @Param			email	body		email.Message		true	"email"
+// @Param			gettype	body		email.Message		true	"请求类型:注册'register',改密码'change'"
+// @Success		200		{object}	response.OkMesData		"{"message":"获取成功"}"
+// @Failure		400		{object}	response.FailMesData	"{"message":"Failure"}"
+// @Router			/api/get_code [get]
 func Get_code(c *gin.Context) {
 	//需要 用户邮箱 验证码用途（改密码，注册）
 	// 使用 ShouldBindJSON 解析请求中的 JSON 数据并将其绑定到 mes 结构体
@@ -111,18 +115,17 @@ func Get_code(c *gin.Context) {
 
 }
 
-// 检查验证码 godoc
-// @Summary 获取验证码
-//
-//	@Description	根据情况检查验证码
-//	@Tags			login
-//	@Accept			application/json
-//	@Produce		application/json
-//	@Param			email	body		Model.Param			true	"email"
-//	@Param			gettype	body		Model.Param			true	"请求类型:注册'register',改密码'change'"
-//	@Success		200		{object}	response.OkMsg		"{"message":"成功"}"
-//	@Failure		400		{object}	response.FailMsg	"{"message":"Failure"}"
-//	@Router			/api/login/check_code [post]
+// @Summary		检查验证码
+// @Description	根据情况检查验证码 会返回 "验证码不存在或已过期"/"验证码正确"/"验证码错误"
+// @Tags			login
+// @Accept			application/json
+// @Produce		application/json
+// @Param			email	body		email.Message		true	"email"
+// @Param code body email.Message true "code"
+// @Param			gettype	body		email.Message		true	"请求类型:注册'register',改密码'change'"
+// @Success		200		{object}	response.OkMesData		"{"message":"成功"}"
+// @Failure		400		{object}	response.FailMesData	"{"message":"Failure"}"
+// @Router			/api/check_code [post]
 func Check_Code(c *gin.Context) {
 	//需要 用户邮箱 验证码 验证码用途（改密码，注册）
 	var usermes email.Message
@@ -143,10 +146,11 @@ func Check_Code(c *gin.Context) {
 // @Tags			login
 // @Accept			application/json
 // @Produce		application/json
-// @Param			email		body		models.User	true	"email"
-// @Param			password	body		models.User	true	"password"
-// @Success		200			{object}	gin.H		`{"message":"注册成功"}`
-// @Router			/api/login/register [put]
+// @Param			email		body		models.User		true	"email"
+// @Param			password	body		models.User		true	"password"
+// @Success		200			{object}	response.OkMesData	`{"message":"注册成功"}`
+// @Failure		400		{object}	response.FailMesData	"{"message":"Failure"}"
+// @Router			/api/register [put]
 func Register(c *gin.Context) {
 	//获取信息
 	var user models.User
